# PawnGfx

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FEATURES.md  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: color.rs  error.rs  lib.rs
core/src/geometry/: mesh.rs  mod.rs  shapes.rs  triangle.rs  vertex.rs
core/src/math/: gradient.rs  interpolate.rs  matrices.rs  mod.rs  power.rs  vector.rs
core/src/packed/: mod.rs  normal.rs
docs/: ARCHITECTURE.md  FEATURES.md  attribute-gradients.md  project-restructure.md
docs/books/pseudo/: book.toml
docs/books/pseudo/src/: SUMMARY.md  lod-derivatives.md  mipmapping.md  overview.md
editor/: Cargo.toml
editor/src/: app.rs  main.rs  state.rs
editor/src/ui/: assets.rs  inspector.rs  mod.rs  scene_panel.rs  toolbar.rs  viewport.rs
renderer/: Cargo.toml
renderer/examples/: shapes.rs  showcase.rs  standalone.rs  standalone_two_models.rs
renderer/examples/utils/: engine.rs  fps.rs  input.rs
renderer/src/: animate.rs  buffer.rs  color.rs  draw.rs  fps.rs  lib.rs  raster.rs  render.rs
renderer/src/geometry/: mod.rs
renderer/src/loaders/: obj.rs
renderer/src/math/: matrices.rs
renderer/src/scene/: camera.rs  mod.rs  object.rs
renderer/src/shaders/: effects.rs  io.rs  mod.rs  uniform.rs  vertex.rs
renderer/src/tests/: mod.rs
scene/: Cargo.toml
scene/src/: camera.rs  color.rs  global.rs  lib.rs  light.rs  material.rs  mod.rs  model.rs  object.rs  texture.rs
scene/src/assets/: handle.rs  loader.rs  mod.rs  obj.rs  registry.rs
scene/src/texture/: albedo.rs  base.rs  bump.rs  mod.rs
src/: animate.rs  camera.rs  color.rs  draw.rs  engine.rs  error.rs  fps.rs  input.rs  main.rs  raster.rs  render.rs
src/geometry/: mesh.rs  mod.rs  shapes.rs  triangle.rs  vertex.rs
src/loaders/: mod.rs  obj.rs
src/math/: interpolate.rs  matrices.rs  mod.rs  vector.rs
src/scene/: camera.rs  light.rs  mod.rs  object.rs  texture.rs
src/shaders/: effects.rs  mod.rs  vertex.rs
src/tests/: mod.rs
