[workspace]
members = ["renderer", "editor", "scene", "core"]

resolver = "2"

[workspace.package]
name = "pawngfx"
authors = ["Syed Anees <syedanees816@gmail.com>"]
repository = "https://github.com/SyedAnees21/PawnGfx"
version = "0.1.0"
edition = "2024"
description = "Light weight 3D software renderer"
readme = "README.md"
publish = false
license = "MIT OR Apache-2.0"

[workspace.dependencies]
pixels = "0.15.0"
winit = "0.29"
hex = "0.4.3"
thiserror = "2.0.18"
image = "0.24"
eframe = "0.24"
rfd = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
