[package]
name = "pawngfx"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
pixels.workspace = true
winit.workspace = true
hex.workspace = true
thiserror.workspace = true
image.workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
