[package]
name = "prenderer"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
pixels = {workspace = true, optional = true}
winit = {workspace = true, optional = true}
hex.workspace = true
thiserror.workspace = true
image.workspace = true
pcore = { path = "../core" }
pscene = { path = "../scene" }

[features]
standalone = ["pixels", "winit"]

[[example]]
name = "standalone"
path = "examples/standalone.rs"
required-features = ["standalone"]