[package]
name = "pscene"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
pcore = { path = "../core" }
